# hs-xmhelper

./: README.md  hs-xmhelper.cabal
src/: Main.hs  StatusParser.hs  TransmissionConfig.hs
