name:                hs-xmhelper
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Eric Litak
maintainer:          elitak@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable xm
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , text
                     , bytestring
                     , regex-applicative
                     , aeson
                     , turtle
  hs-source-dirs:      src
  default-language:    Haskell2010
